--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.openhab</groupId>
-        <artifactId>pom-tycho</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <groupId>org.openhab.addons.bom</groupId>
+        <artifactId>org.openhab.addons.bom.openhab-addons</artifactId>
+        <version>4.2.0-SNAPSHOT</version>
 		<relativePath></relativePath>
     </parent>
+<!--    <parent>-->
+<!--        <groupId>org.openhab</groupId>-->
+<!--        <artifactId>pom-tycho</artifactId>-->
+<!--        <version>2.4.0-SNAPSHOT</version>-->
+<!--		<relativePath></relativePath>-->
+<!--    </parent>-->
 
     <groupId>org.openhab.binding</groupId>
 	<artifactId>org.openhab.binding.oilfox</artifactId>
-	<version>2.4.0-SNAPSHOT</version>
+	<version>2.4.1-SNAPSHOT</version>
 
 	<name>OilFox Binding</name>
 
-	<packaging>eclipse-plugin</packaging>
+<!--	<packaging>eclipse-plugin</packaging>-->
 
     <build>
         <testSourceDirectory>src/test</testSourceDirectory>
@@ -23,7 +31,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.0</version>
                 <executions>
                     <execution>
                         <id>test</id>
@@ -42,7 +50,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -161,7 +169,8 @@
         <!-- openHAB dependencies p2 repository -->
         <repository>
             <id>p2-openhab-deps-repo</id>
-            <url>https://dl.bintray.com/openhab/p2/openhab-deps-repo/${ohdr.version}</url>
+<!--            <url>https://dl.bintray.com/openhab/p2/openhab-deps-repo/${ohdr.version}</url>-->
+            <url>https://github.com/openhab/openhab-deps-repo</url>
             <layout>p2</layout>
         </repository>
 
